# tellmeastory

./: .gitignore  README.md  pyproject.toml
src/tellmeastory/: cli.py  models.py  pipeline.py  stage.py
src/tellmeastory/prompts/: outliner.py  writer.py
src/tellmeastory/stages/: openai_outliner.py  openai_writer.py  outliner.py  writer.py
